carvel-package/pkg-dashboard/config/02_dashboard-service-scraper.yaml
#@ load("@ytt:data", "data")
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: dashboard-metrics-scraper
  name: dashboard-metrics-scraper
  namespace: #@ data.values.namespace
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    k8s-app: dashboard-metrics-scraper
