carvel-package/pkg-dashboard/config/07_dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  labels:
    k8s-app: kubernetes-dashboard
  annotations:
      nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      service.alpha.kubernetes.io/app-protocols: '{"https":"HTTPS"}'
      projectcontour.io/ingress.class: contour
spec:
  rules:
    - host: k8s-ui.10.0.77.51.nip.io
      http:
        paths:
          - backend:
              service:
                name: k8s-ui-kubernetes-dashboard
                port:
                  number: 443
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - k8s-ui.10.0.77.51.nip.io
      secretName: k8s-ui-secret
